After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 663490 - Two minor fixes
Two minor fixes
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2011-11-06 08:32 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2011-11-28 19:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
object: Remove non-working debug message (1.07 KB, patch)
2011-11-06 08:32 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
lang: Fix up an error message (782 bytes, patch)
2011-11-06 08:32 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2011-11-06 08:32:08 UTC
This is based upon my work in bug #663441
Comment 1 Jasper St. Pierre (not reading bugmail) 2011-11-06 08:32:10 UTC
Created attachment 200811 [details] [review]
object: Remove non-working debug message

object_priv and class_priv are non-existant. We probably just haven't noticed
because gjs_debug_lifecycle has been a no-op for a while
Comment 2 Jasper St. Pierre (not reading bugmail) 2011-11-06 08:32:12 UTC
Created attachment 200812 [details] [review]
lang: Fix up an error message
Comment 3 Colin Walters 2011-11-28 19:08:51 UTC
Review of attachment 200811 [details] [review]:

Sure, the double debug message seems unnecessary too.
Comment 4 Colin Walters 2011-11-28 19:09:09 UTC
Review of attachment 200812 [details] [review]:

Sure
Comment 5 Jasper St. Pierre (not reading bugmail) 2011-11-28 19:45:56 UTC
Attachment 200811 [details] pushed as 027ab98 - object: Remove non-working debug message
Attachment 200812 [details] pushed as d809439 - lang: Fix up an error message