object: Remove non-working debug message

object_priv and class_priv are non-existant. We probably just haven't noticed
because gjs_debug_lifecycle has been a no-op for a while

https://bugzilla.gnome.org/show_bug.cgi?id=663490